tests/models/struct/unnamed/f32/fail/gt.stderr
error[E0277]: can't compare `f32` with `{integer}`
 --> tests/models/struct/unnamed/f32/fail/gt.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^ no implementation for `f32 < {integer}` and `f32 > {integer}`
  |
  = help: the trait `PartialOrd<{integer}>` is not implemented for `f32`
  = help: the following other types implement trait `PartialOrd<Rhs>`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            isize
          and $N others
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using a floating-point literal by writing it with `.0`
  |
4 |    #[field(gt = 2.0)]
  |                  ++
